# buy-for-real-llm

./: .gitignore  README.md
.cursor/rules/: nextjs.mdc  python.mdc
.github/workflows/: vercel.yml
backend/: pyproject.toml  run_api.py
backend/api/: README.md  main.py
backend/object_detection/: qwen.py
backend/object_detection/utils/: image_to_base64.py
frontend/: .cursorrules  .env.example  .gitignore  GEMINI.md  README.md  _vercel.json  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/.cursor/rules/: authentication.mdc  database.mdc  file-storage.mdc  framework.mdc  nextjs.mdc  react-query.mdc  react.mdc  styling.mdc  trpc.mdc  validation.mdc
frontend/drizzle/: 0000_charming_mastermind.sql  0000_modern_thena.sql  0001_condemned_sue_storm.sql  0001_luxuriant_jean_grey.sql  0002_add_media_type.sql  0002_happy_tana_nile.sql  0003_add_media_is_active.sql  0003_cooing_timeslip.sql  0004_bitter_absorbing_man.sql  0004_serious_whiplash.sql  0005_quiet_dormammu.sql  0006_freezing_nova.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
frontend/scripts/: populate-slugs.ts
frontend/src/: middleware.ts
frontend/src/actions/: mediaActions.ts  revalidate.ts  userAction.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: AddFileDialog.tsx  AddGroupDialog.tsx  AppSidebar.tsx  AuthModal.tsx  (+5 more)
(+94 files in other folders)
